# python-ciencia-datos

python-ciencia-datos/: .gitignore  _brand.yml  _quarto.yml  arreglos_numericos.qmd  datos_jerarquicos_json_xml.qmd  datos_tabulares_jerarquicos.qmd  datos_tabulares_pd_po.qmd  pyproject.toml  references.qmd  styles.css
python-ciencia-datos/slides/: custom.scss
