[project]
name = "python-ciencia-datos"
version = "0.1.0"
description = "Módulo de preprocesamiento y limpieza de datos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "quarto-cli>=1.6.37",
    "quarto>=0.1.0",
    "seaborn>=0.13.2",
    "pre-commit>=4.1.0",
]
